feat: add menu action and action chooser left pane option

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -327,11 +327,9 @@
   "ByUsingThisService...": "By using this service, you agree to our <a href=\"https://getsession.org/terms-of-service \">Terms of Service</a> and <a href=\"https://getsession.org/privacy-policy\" target=\"_blank\">Privacy Policy</a>",
   "beginYourSession": "Begin your Session.",
   "welcomeToYourSession": "Welcome to your Session",
-  "newSession": "New Session",
   "searchFor...": "Search for messages or conversations",
   "enterSessionID": "Enter Session ID",
-  "enterSessionIDOfRecipient": "Enter Session ID or ONS name of recipient",
-  "usersCanShareTheir...": "Users can share their Session ID by going into their account settings and tapping \"Share Session ID\", or by sharing their QR code.",
+  "enterSessionIDOfRecipient": "Enter your contact's Session ID or ONS",
   "message": "Message",
   "appearanceSettingsTitle": "Appearance",
   "privacySettingsTitle": "Privacy",
@@ -339,8 +337,8 @@
   "recoveryPhraseEmpty": "Enter your recovery phrase",
   "displayNameEmpty": "Please enter a display name",
   "members": "$count$ members",
-  "joinOpenGroup": "Join Open Group",
-  "newClosedGroup": "New Closed Group",
+  "joinOpenGroup": "Join Community",
+  "createGroup": "Create Group",
   "createClosedGroupNamePrompt": "Group Name",
   "createClosedGroupPlaceholder": "Enter a group name",
   "openGroupURL": "Open Group URL",
