feat: wrap up the new Join Community overlay

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -28,9 +28,9 @@
   "viewMenuToggleFullScreen": "Toggle Full Screen",
   "viewMenuToggleDevTools": "Toggle Developer Tools",
   "contextMenuNoSuggestions": "No Suggestions",
-  "openGroupInvitation": "Open group invitation",
+  "openGroupInvitation": "Community invitation",
   "joinOpenGroupAfterInvitationConfirmationTitle": "Join $roomName$?",
-  "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ open group?",
+  "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ community?",
   "couldntFindServerMatching": "Couldn't find the corresponding opengroup server",
   "enterSessionIDOrONSName": "Enter Session ID or ONS name",
   "loading": "Loading...",
@@ -138,10 +138,10 @@
   "typingIndicatorsSettingDescription": "See and share when messages are being typed (applies to all sessions).",
   "typingIndicatorsSettingTitle": "Typing Indicators",
   "zoomFactorSettingTitle": "Zoom Factor",
-  "pruneSettingTitle": "Prune Old Open Group Messages",
-  "pruneSettingDescription": "Prune messages older than 6 months from Open Groups on start",
-  "pruningOpengroupDialogTitle": "Open group pruning",
-  "pruningOpengroupDialogMessage": "Pruning old open group messages improves performance. Enable pruning for open group messages older than 6 months?",
+  "pruneSettingTitle": "Prune Old Community Messages",
+  "pruneSettingDescription": "Prune messages older than 6 months from Communities on start",
+  "pruningOpengroupDialogTitle": "Community pruning",
+  "pruningOpengroupDialogMessage": "Pruning old communities messages improves performance. Enable pruning for communities messages older than 6 months?",
   "pruningOpengroupDialogSubMessage": "You can change this setting in the Session settings menu",
   "enable": "Enable",
   "keepDisabled": "Keep disabled",
@@ -281,10 +281,10 @@
   "setPasswordToastDescription": "Your password has been set. Please keep it safe.",
   "changePasswordToastDescription": "Your password has been changed. Please keep it safe.",
   "removePasswordToastDescription": "You have removed your password.",
-  "publicChatExists": "You are already connected to this open group",
+  "publicChatExists": "You are already connected to this community",
   "connectToServerFail": "Couldn't join group",
   "connectingToServer": "Connecting...",
-  "connectToServerSuccess": "Successfully connected to open group",
+  "connectToServerSuccess": "Successfully connected to community",
   "setPasswordFail": "Failed to set password",
   "passwordLengthError": "Password must be between 6 and 64 characters long",
   "passwordTypeError": "Password must be a string",
@@ -337,12 +337,13 @@
   "recoveryPhraseEmpty": "Enter your recovery phrase",
   "displayNameEmpty": "Please enter a display name",
   "members": "$count$ members",
+  "join": "Join",
   "joinOpenGroup": "Join Community",
   "createGroup": "Create Group",
   "createClosedGroupNamePrompt": "Group Name",
   "createClosedGroupPlaceholder": "Enter a group name",
-  "openGroupURL": "Open Group URL",
-  "enterAnOpenGroupURL": "Enter an open group URL",
+  "openGroupURL": "Community URL",
+  "enterAnOpenGroupURL": "Enter a community URL",
   "next": "Next",
   "invalidGroupNameTooShort": "Please enter a group name",
   "invalidGroupNameTooLong": "Please enter a shorter group name",
