feat: add search by contacts to closed group overlay

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -328,6 +328,7 @@
   "beginYourSession": "Begin your Session.",
   "welcomeToYourSession": "Welcome to your Session",
   "searchFor...": "Search for messages or conversations",
+  "searchForContactsOnly": "Search for contacts",
   "enterSessionID": "Enter Session ID",
   "enterSessionIDOfRecipient": "Enter your contact's Session ID or ONS",
   "message": "Message",
@@ -340,6 +341,7 @@
   "join": "Join",
   "joinOpenGroup": "Join Community",
   "createGroup": "Create Group",
+  "create": "Create",
   "createClosedGroupNamePrompt": "Group Name",
   "createClosedGroupPlaceholder": "Enter a group name",
   "openGroupURL": "Community URL",
