fix: finish menu redesign

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -327,7 +327,7 @@
   "ByUsingThisService...": "By using this service, you agree to our <a href=\"https://getsession.org/terms-of-service \">Terms of Service</a> and <a href=\"https://getsession.org/privacy-policy\" target=\"_blank\">Privacy Policy</a>",
   "beginYourSession": "Begin your Session.",
   "welcomeToYourSession": "Welcome to your Session",
-  "searchFor...": "Search for messages or conversations",
+  "searchFor...": "Search conversations and contacts",
   "searchForContactsOnly": "Search for contacts",
   "enterSessionID": "Enter Session ID",
   "enterSessionIDOfRecipient": "Enter your contact's Session ID or ONS",
