--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -224,7 +224,8 @@
   "unblockUser": "Unblock",
   "unblocked": "Unblocked",
   "blocked": "Blocked",
-  "blockedSettingsTitle": "Blocked contacts",
+  "blockedSettingsTitle": "Blocked Contacts",
+  "conversationsSettingsTitle": "Conversations",
   "unbanUser": "Unban User",
   "userUnbanned": "User unbanned successfully",
   "userUnbanFailed": "Unban failed!",
@@ -407,6 +408,7 @@
   "surveyTitle": "Take our Session Survey",
   "goToOurSurvey": "Go to our survey",
   "clearAll": "Clear All",
+  "clearDataSettingsTitle": "Clear Data",
   "messageRequests": "Message Requests",
   "requestsSubtitle": "Pending Requests",
   "requestsPlaceholder": "No requests",
@@ -417,6 +419,8 @@
   "accept": "Accept",
   "decline": "Decline",
   "endCall": "End call",
+  "permissionsSettingsTitle": "Permissions",
+  "helpSettingsTitle": "Help",
   "cameraPermissionNeededTitle": "Voice/Video Call permissions required",
   "cameraPermissionNeeded": "You can enable the 'Voice and video calls' permission in the Privacy Settings.",
   "unableToCall": "Cancel your ongoing call first",
@@ -444,7 +448,7 @@
   "declineRequestMessage": "Are you sure you want to decline this message request?",
   "respondingToRequestWarning": "Sending a message to this user will automatically accept their message request and reveal your Session ID.",
   "hideRequestBanner": "Hide Message Request Banner",
-  "openMessageRequestInbox": "View Message Requests",
+  "openMessageRequestInbox": "Message Requests",
   "noMessageRequestsPending": "No pending message requests",
   "noMediaUntilApproved": "You cannot send attachments until the conversation is approved",
   "mustBeApproved": "This conversation must be accepted to use this feature",
