--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -126,20 +126,20 @@
   "tookAScreenshot": "$name$ took a screenshot",
   "savedTheFile": "Media saved by $name$",
   "linkPreviewsTitle": "Send Link Previews",
-  "linkPreviewDescription": "Previews are supported for most urls",
+  "linkPreviewDescription": "Show link previews for supported URLs",
   "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
   "mediaPermissionsTitle": "Microphone",
   "mediaPermissionsDescription": "Allow access to microphone",
   "spellCheckTitle": "Spell Check",
-  "spellCheckDescription": "Enable spell check of text entered in message composition box",
+  "spellCheckDescription": "Enable spell check when typing messages",
   "spellCheckDirty": "You must restart Session to apply your new settings",
-  "readReceiptSettingDescription": "See and share when messages have been read (enables read receipts in all sessions).",
+  "readReceiptSettingDescription": "Show read receipts for all messages you send and receive",
   "readReceiptSettingTitle": "Read Receipts",
-  "typingIndicatorsSettingDescription": "See and share when messages are being typed (applies to all sessions).",
+  "typingIndicatorsSettingDescription": "See and share typing indicators",
   "typingIndicatorsSettingTitle": "Typing Indicators",
   "zoomFactorSettingTitle": "Zoom Factor",
-  "pruneSettingTitle": "Prune Old Community Messages",
-  "pruneSettingDescription": "Prune messages older than 6 months from Communities on start",
+  "pruneSettingTitle": "Trim Communities",
+  "pruneSettingDescription": "Delete messages from Communities older than 6 months, and where there are over 2,000 messages",
   "pruningOpengroupDialogTitle": "Community pruning",
   "pruningOpengroupDialogMessage": "Pruning old communities messages improves performance. Enable pruning for communities messages older than 6 months?",
   "pruningOpengroupDialogSubMessage": "You can change this setting in the Session settings menu",
@@ -250,11 +250,11 @@
   "showRecoveryPhrase": "Recovery Phrase",
   "yourSessionID": "Your Session ID",
   "setAccountPasswordTitle": "Set Account Password",
-  "setAccountPasswordDescription": "Require password to unlock Session’s screen. You can still receive message notifications while Screen Lock is enabled. Session’s notification settings allow you to customize information that is displayed",
+  "setAccountPasswordDescription": "Require password to unlock Session",
   "changeAccountPasswordTitle": "Change Account Password",
-  "changeAccountPasswordDescription": "Change your password",
+  "changeAccountPasswordDescription": "Change the password required to unlock Session",
   "removeAccountPasswordTitle": "Remove Account Password",
-  "removeAccountPasswordDescription": "Remove the password associated with your account",
+  "removeAccountPasswordDescription": "Remove the password required to unlock Session",
   "enterPassword": "Please enter your password",
   "confirmPassword": "Confirm password",
   "showRecoveryPhrasePasswordRequest": "Please enter your password",
@@ -310,7 +310,7 @@
   "onlyAdminCanRemoveMembersDesc": "Only the creator of the group can remove users",
   "createAccount": "Create account",
   "startInTrayTitle": "Keep in System Tray",
-  "startInTrayDescription": "Session continues running in the background when you close the window",
+  "startInTrayDescription": "Keep Session running in the background when you close the window",
   "yourUniqueSessionID": "Say hello to your Session ID",
   "allUsersAreRandomly...": "Your Session ID is the unique address people can use to contact you on Session. With no connection to your real identity, your Session ID is totally anonymous and private by design.",
   "getStarted": "Get started",
@@ -379,8 +379,8 @@
   "linkVisitWarningTitle": "Open this link in your browser?",
   "linkVisitWarningMessage": "Are you sure you want to open $url$ in your browser?",
   "open": "Open",
-  "audioMessageAutoplayTitle": "Audio Message Autoplay",
-  "audioMessageAutoplayDescription": "Automatically play consecutively sent audio messages",
+  "audioMessageAutoplayTitle": "Autoplay Audio Messages",
+  "audioMessageAutoplayDescription": "Autoplay consecutive audio messages",
   "clickToTrustContact": "Click to download media",
   "trustThisContactDialogTitle": "Trust $name$?",
   "trustThisContactDialogDescription": "Are you sure you want to download media sent by $name$?",
@@ -430,10 +430,10 @@
   "noCameraFound": "No camera found",
   "noAudioInputFound": "No audio input found",
   "noAudioOutputFound": "No audio output found",
-  "callMediaPermissionsTitle": "Voice and video calls",
+  "callMediaPermissionsTitle": "Voice and Video Calls (Beta)",
   "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
   "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to them first.",
-  "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
+  "callMediaPermissionsDescription": "Enables voice and video calls to and from other users",
   "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
   "startedACall": "You called $name$",
   "answeredACall": "Call with $name$",
