chore: keep full stop for everything in settings description

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -126,27 +126,26 @@
   "tookAScreenshot": "$name$ took a screenshot",
   "savedTheFile": "Media saved by $name$",
   "linkPreviewsTitle": "Send Link Previews",
-  "linkPreviewDescription": "Show link previews for supported URLs",
+  "linkPreviewDescription": "Show link previews for supported URLs.",
   "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
   "mediaPermissionsTitle": "Microphone",
-  "mediaPermissionsDescription": "Allow access to microphone",
+  "mediaPermissionsDescription": "Allow access to microphone.",
   "spellCheckTitle": "Spell Check",
-  "spellCheckDescription": "Enable spell check when typing messages",
+  "spellCheckDescription": "Enable spell check when typing messages.",
   "spellCheckDirty": "You must restart Session to apply your new settings",
-  "readReceiptSettingDescription": "Show read receipts for all messages you send and receive",
+  "readReceiptSettingDescription": "See and share typing indicators in one-to-one chats.",
   "readReceiptSettingTitle": "Read Receipts",
-  "typingIndicatorsSettingDescription": "See and share typing indicators",
+  "typingIndicatorsSettingDescription": "See and share typing indicators.",
   "typingIndicatorsSettingTitle": "Typing Indicators",
   "zoomFactorSettingTitle": "Zoom Factor",
   "pruneSettingTitle": "Trim Communities",
-  "pruneSettingDescription": "Delete messages from Communities older than 6 months, and where there are over 2,000 messages",
+  "pruneSettingDescription": "Delete messages from Communities older than 6 months, and where there are over 2,000 messages.",
   "pruningOpengroupDialogTitle": "Community pruning",
   "pruningOpengroupDialogMessage": "Pruning old communities messages improves performance. Enable pruning for communities messages older than 6 months?",
   "pruningOpengroupDialogSubMessage": "You can change this setting in the Session settings menu",
   "enable": "Enable",
   "keepDisabled": "Keep disabled",
-  "notificationSettingsDialog": "When messages arrive, display notifications that reveal...",
-  "disableNotifications": "Mute notifications",
+  "notificationSettingsDialog": "The information shown in notifications.",
   "nameAndMessage": "Name and content",
   "noNameOrMessage": "No name or content",
   "nameOnly": "Name Only",
@@ -198,12 +197,12 @@
   "timerSetTo": "Disappearing message time set to $time$",
   "noteToSelf": "Note to Self",
   "hideMenuBarTitle": "Hide Menu Bar",
-  "hideMenuBarDescription": "Toggle system menu bar visibility",
+  "hideMenuBarDescription": "Toggle system menu bar visibility.",
   "startConversation": "Start New Conversation",
   "invalidNumberError": "Invalid Session ID or ONS Name",
   "failedResolveOns": "Failed to resolve ONS name",
   "autoUpdateSettingTitle": "Auto Update",
-  "autoUpdateSettingDescription": "Automatically check for updates on startup",
+  "autoUpdateSettingDescription": "Automatically check for updates on startup.",
   "autoUpdateNewVersionTitle": "Session update available",
   "autoUpdateNewVersionMessage": "There is a new version of Session available.",
   "autoUpdateNewVersionInstructions": "Press Restart Session to apply the updates.",
@@ -250,11 +249,11 @@
   "showRecoveryPhrase": "Recovery Phrase",
   "yourSessionID": "Your Session ID",
   "setAccountPasswordTitle": "Set Account Password",
-  "setAccountPasswordDescription": "Require password to unlock Session",
+  "setAccountPasswordDescription": "Require password to unlock Session.",
   "changeAccountPasswordTitle": "Change Account Password",
-  "changeAccountPasswordDescription": "Change the password required to unlock Session",
+  "changeAccountPasswordDescription": "Change the password required to unlock Session.",
   "removeAccountPasswordTitle": "Remove Account Password",
-  "removeAccountPasswordDescription": "Remove the password required to unlock Session",
+  "removeAccountPasswordDescription": "Remove the password required to unlock Session.",
   "enterPassword": "Please enter your password",
   "confirmPassword": "Confirm password",
   "showRecoveryPhrasePasswordRequest": "Please enter your password",
@@ -310,7 +309,7 @@
   "onlyAdminCanRemoveMembersDesc": "Only the creator of the group can remove users",
   "createAccount": "Create account",
   "startInTrayTitle": "Keep in System Tray",
-  "startInTrayDescription": "Keep Session running in the background when you close the window",
+  "startInTrayDescription": "Keep Session running in the background when you close the window.",
   "yourUniqueSessionID": "Say hello to your Session ID",
   "allUsersAreRandomly...": "Your Session ID is the unique address people can use to contact you on Session. With no connection to your real identity, your Session ID is totally anonymous and private by design.",
   "getStarted": "Get started",
@@ -336,6 +335,7 @@
   "appearanceSettingsTitle": "Appearance",
   "privacySettingsTitle": "Privacy",
   "notificationsSettingsTitle": "Notifications",
+  "notificationsSettingsContent": "Notifications Content",
   "recoveryPhraseEmpty": "Enter your recovery phrase",
   "displayNameEmpty": "Please enter a display name",
   "members": "$count$ members",
@@ -380,7 +380,7 @@
   "linkVisitWarningMessage": "Are you sure you want to open $url$ in your browser?",
   "open": "Open",
   "audioMessageAutoplayTitle": "Autoplay Audio Messages",
-  "audioMessageAutoplayDescription": "Autoplay consecutive audio messages",
+  "audioMessageAutoplayDescription": "Autoplay consecutive audio messages.",
   "clickToTrustContact": "Click to download media",
   "trustThisContactDialogTitle": "Trust $name$?",
   "trustThisContactDialogDescription": "Are you sure you want to download media sent by $name$?",
@@ -433,7 +433,7 @@
   "callMediaPermissionsTitle": "Voice and Video Calls (Beta)",
   "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
   "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to them first.",
-  "callMediaPermissionsDescription": "Enables voice and video calls to and from other users",
+  "callMediaPermissionsDescription": "Enables voice and video calls to and from other users.",
   "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
   "startedACall": "You called $name$",
   "answeredACall": "Call with $name$",
