feat: update design of the Notification Settings screen
the preview button is not linked yet

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -335,7 +335,8 @@
   "appearanceSettingsTitle": "Appearance",
   "privacySettingsTitle": "Privacy",
   "notificationsSettingsTitle": "Notifications",
-  "notificationsSettingsContent": "Notifications Content",
+  "notificationsSettingsContent": "Notification Content",
+  "notificationPreview": "Preview",
   "recoveryPhraseEmpty": "Enter your recovery phrase",
   "displayNameEmpty": "Please enter a display name",
   "members": "$count$ members",
