--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -39,7 +39,7 @@
   "youGotKickedFromGroup": "You were removed from the group.",
   "unreadMessages": "Unread Messages",
   "debugLogExplanation": "This log will be saved to your desktop.",
-  "reportIssue": "Report an issue",
+  "reportIssue": "Report a Bug",
   "markAllAsRead": "Mark All as Read",
   "incomingError": "Error handling incoming message",
   "media": "Media",
@@ -61,7 +61,8 @@
   "unableToLoadAttachment": "Sorry, there was an error setting your attachment.",
   "offline": "Offline",
   "debugLog": "Debug Log",
-  "showDebugLog": "Show Debug Log",
+  "showDebugLog": "Export Logs",
+  "shareBugDetails": "Share some details to help us resolve your issue. Export your logs, then upload the file though Session's Help Desk.",
   "goToReleaseNotes": "Go to Release Notes",
   "goToSupportPage": "Go to Support Page",
   "about": "About",
@@ -358,8 +359,7 @@
   "userAddedToModerators": "User added to moderator list",
   "userRemovedFromModerators": "User removed from moderator list",
   "orJoinOneOfThese": "Or join one of these...",
-  "helpUsTranslateSession": "Help us Translate Session",
-  "translation": "Translation",
+  "helpUsTranslateSession": "Translate Session",
   "closedGroupInviteFailTitle": "Group Invitation Failed",
   "closedGroupInviteFailTitlePlural": "Group Invitations Failed",
   "closedGroupInviteFailMessage": "Unable to successfully invite a group member",
@@ -407,8 +407,9 @@
   "recoveryPhraseRevealMessage": "Secure your account by saving your recovery phrase. Reveal your recovery phrase then store it safely to secure it.",
   "recoveryPhraseRevealButtonText": "Reveal Recovery Phrase",
   "notificationSubtitle": "Notifications - $setting$",
-  "surveyTitle": "Take our Session Survey",
-  "goToOurSurvey": "Go to our survey",
+  "surveyTitle": "We'd love your Feedback",
+  "faq": "FAQ",
+  "support": "Support",
   "clearAll": "Clear All",
   "clearDataSettingsTitle": "Clear Data",
   "messageRequests": "Message Requests",
