fix: add some aria labels and match QA test

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -152,6 +152,10 @@
   "noNameOrMessage": "No name or content",
   "nameOnly": "Name Only",
   "newMessage": "New Message",
+  "createConversationNewContact": "Create a conversation with a new contact",
+  "createConversationNewGroup": "Create a group with existing contacts",
+  "joinACommunity": "Join a community",
+  "chooseAnAction": "Choose an action to start a conversation",
   "newMessages": "New Messages",
   "notificationMostRecentFrom": "Most recent from: $name$",
   "notificationFrom": "From:",
@@ -283,7 +287,7 @@
   "changePasswordToastDescription": "Your password has been changed. Please keep it safe.",
   "removePasswordToastDescription": "You have removed your password.",
   "publicChatExists": "You are already connected to this community",
-  "connectToServerFail": "Couldn't join group",
+  "connectToServerFail": "Couldn't join community",
   "connectingToServer": "Connecting...",
   "connectToServerSuccess": "Successfully connected to community",
   "setPasswordFail": "Failed to set password",
