feat: add theme switcher +accent color from settings
not all of the logic is linked and not all of the colors are there as this is part of theming

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -140,6 +140,19 @@
   "typingIndicatorsSettingDescription": "See and share typing indicators in one-to-one chats.",
   "typingIndicatorsSettingTitle": "Typing Indicators",
   "zoomFactorSettingTitle": "Zoom Factor",
+  "themesSettingTitle": "Themes",
+  "primaryColor": "Primary Color",
+  "primaryColorGreen": "Primary color green",
+  "primaryColorBlue": "Primary color blue",
+  "primaryColorYellow": "Primary color yellow",
+  "primaryColorPink": "Primary color pink",
+  "primaryColorPurple": "Primary color purple",
+  "primaryColorOrange": "Primary color  orange",
+  "primaryColorRed": "Primary color red",
+  "classicDarkThemeTitle": "Classic Dark",
+  "classicLightThemeTitle": "Classic Light",
+  "oceanDarkThemeTitle": "Ocean Dark",
+  "oceanLightThemeTitle": "Ocean Light",
   "pruneSettingTitle": "Trim Communities",
   "pruneSettingDescription": "Delete messages from Communities older than 6 months, and where there are over 2,000 messages.",
   "pruningOpengroupDialogTitle": "Community pruning",
