--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -463,6 +463,6 @@
   "reactionPopupTwo": "$name$ & $name2$",
   "reactionPopupThree": "$name$, $name2$ & $name3$",
   "reactionPopupMany": "$name$, $name2$, $name3$ &",
-  "reactionListCountSingular": "And $otherSingular$ has reacted to this message",
-  "reactionListCountPlural": "And $otherPlural$ have reacted to this message"
+  "reactionListCountSingular": "And $otherSingular$ has reacted <span>$emoji$</span> to this message",
+  "reactionListCountPlural": "And $otherPlural$ have reacted <span>$emoji$</span> to this message"
 }
