fix: position of join button and style of disable buttons
also add a little animation to the menu button rotation

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -355,7 +355,7 @@
   "invalidGroupNameTooShort": "Please enter a group name",
   "invalidGroupNameTooLong": "Please enter a shorter group name",
   "pickClosedGroupMember": "Please pick at least 1 group member",
-  "closedGroupMaxSize": "A closed group cannot have more than 100 members",
+  "closedGroupMaxSize": "A group cannot have more than 100 members",
   "noBlockedContacts": "No blocked contacts",
   "userAddedToModerators": "User added to moderator list",
   "userRemovedFromModerators": "User removed from moderator list",
@@ -369,7 +369,7 @@
   "closedGroupInviteOkText": "Retry invitations",
   "closedGroupInviteSuccessTitlePlural": "Group Invitations Completed",
   "closedGroupInviteSuccessTitle": "Group Invitation Succeeded",
-  "closedGroupInviteSuccessMessage": "Successfully invited closed group members",
+  "closedGroupInviteSuccessMessage": "Successfully invited group members",
   "notificationForConvo": "Notifications",
   "notificationForConvo_all": "All",
   "notificationForConvo_disabled": "Disabled",
