fix: address reviews comment

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -173,6 +173,7 @@
   "sendFailed": "Send Failed",
   "mediaMessage": "Media message",
   "messageBodyMissing": "Please enter a message body.",
+  "messageBody": "Message body",
   "unblockToSend": "Unblock this contact to send a message.",
   "unblockGroupToSend": "This group is blocked. Unlock it if you would like to send a message.",
   "youChangedTheTimer": "You set the disappearing message timer to $time$",
@@ -421,7 +422,7 @@
   "recoveryPhraseRevealMessage": "Secure your account by saving your recovery phrase. Reveal your recovery phrase then store it safely to secure it.",
   "recoveryPhraseRevealButtonText": "Reveal Recovery Phrase",
   "notificationSubtitle": "Notifications - $setting$",
-  "surveyTitle": "We'd love your Feedback",
+  "surveyTitle": "We'd Love Your Feedback",
   "faq": "FAQ",
   "support": "Support",
   "clearAll": "Clear All",
