--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -71,7 +71,7 @@
   "noSearchResults": "No results found for \"$searchTerm$\"",
   "conversationsHeader": "Contacts and Groups",
   "contactsHeader": "Contacts",
-  "messagesHeader": "Messages",
+  "messagesHeader": "Conversations",
   "settingsHeader": "Settings",
   "typingAlt": "Typing animation for this conversation",
   "contactAvatarAlt": "Avatar for contact $name$",
