fix: aply latests UI tweaks and copy for menu-redesign

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -33,6 +33,7 @@
   "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ community?",
   "couldntFindServerMatching": "Couldn't find the corresponding opengroup server",
   "enterSessionIDOrONSName": "Enter Session ID or ONS name",
+  "startNewConversationBy...": "Start a new conversation by entering someone's Session ID or share your Session ID with them.",
   "loading": "Loading...",
   "done": "Done",
   "youLeftTheGroup": "You have left the group.",
@@ -364,7 +365,7 @@
   "createClosedGroupNamePrompt": "Group Name",
   "createClosedGroupPlaceholder": "Enter a group name",
   "openGroupURL": "Community URL",
-  "enterAnOpenGroupURL": "Enter a community URL",
+  "enterAnOpenGroupURL": "Enter Community URL",
   "next": "Next",
   "invalidGroupNameTooShort": "Please enter a group name",
   "invalidGroupNameTooLong": "Please enter a shorter group name",
