fix: address regression tests UI issues

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -251,7 +251,7 @@
   "userBanned": "Banned successfully",
   "userBanFailed": "Ban failed!",
   "leaveGroup": "Leave Group",
-  "leaveAndRemoveForEveryone": "Leave Group and remove for everyone",
+  "leaveAndRemoveForEveryone": "Leave Group and Remove for Everyone",
   "leaveGroupConfirmation": "Are you sure you want to leave this group?",
   "leaveGroupConfirmationAdmin": "As you are the admin of this group, if you leave it it will be removed for every current members. Are you sure you want to leave this group?",
   "cannotRemoveCreatorFromGroup": "Cannot remove this user",
@@ -274,6 +274,8 @@
   "removeAccountPasswordDescription": "Remove the password required to unlock Session.",
   "enterPassword": "Please enter your password",
   "confirmPassword": "Confirm password",
+  "enterNewPassword": "Please enter your new password",
+  "confirmNewPassword": "Confirm new password",
   "showRecoveryPhrasePasswordRequest": "Please enter your password",
   "recoveryPhraseSavePromptMain": "Your recovery phrase is the master key to your Session ID — you can use it to restore your Session ID if you lose access to your device. Store your recovery phrase in a safe place, and don't give it to anyone.",
   "invalidOpenGroupUrl": "Invalid URL",
