fix: update copy and clear account modal

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -63,7 +63,7 @@
   "offline": "Offline",
   "debugLog": "Debug Log",
   "showDebugLog": "Export Logs",
-  "shareBugDetails": "Share some details to help us resolve your issue. Export your logs, then upload the file though Session's Help Desk.",
+  "shareBugDetails": "Export your logs, then upload the file though Session's Help Desk.",
   "goToReleaseNotes": "Go to Release Notes",
   "goToSupportPage": "Go to Support Page",
   "about": "About",
@@ -113,7 +113,7 @@
   "deleteConversationConfirmation": "Permanently delete the messages in this conversation?",
   "clear": "Clear",
   "clearAllData": "Clear All Data",
-  "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
+  "deleteAccountWarning": "This will permanently delete your messages and contacts.",
   "deleteContactConfirmation": "Are you sure you want to delete this conversation?",
   "quoteThumbnailAlt": "Thumbnail of image from quoted message",
   "imageAttachmentAlt": "Image attached to message",
@@ -136,7 +136,7 @@
   "spellCheckTitle": "Spell Check",
   "spellCheckDescription": "Enable spell check when typing messages.",
   "spellCheckDirty": "You must restart Session to apply your new settings",
-  "readReceiptSettingDescription": "See and share typing indicators in one-to-one chats.",
+  "readReceiptSettingDescription": "Send read receipts in one-to-one chats.",
   "readReceiptSettingTitle": "Read Receipts",
   "typingIndicatorsSettingDescription": "See and share typing indicators in one-to-one chats.",
   "typingIndicatorsSettingTitle": "Typing Indicators",
@@ -280,14 +280,14 @@
   "recoveryPhraseSavePromptMain": "Your recovery phrase is the master key to your Session ID — you can use it to restore your Session ID if you lose access to your device. Store your recovery phrase in a safe place, and don't give it to anyone.",
   "invalidOpenGroupUrl": "Invalid URL",
   "copiedToClipboard": "Copied to clipboard",
-  "passwordViewTitle": "Type In Your Password",
-  "unlock": "Unlock",
+  "passwordViewTitle": "Enter Password",
   "password": "Password",
   "setPassword": "Set Password",
   "changePassword": "Change Password",
+  "createPassword": "Create your password",
   "removePassword": "Remove Password",
   "maxPasswordAttempts": "Invalid Password. Would you like to reset the database?",
-  "typeInOldPassword": "Please type in your old password",
+  "typeInOldPassword": "Please enter your current password",
   "invalidOldPassword": "Old password is invalid",
   "invalidPassword": "Invalid password",
   "noGivenPassword": "Please enter your password",
@@ -413,11 +413,11 @@
   "dialogClearAllDataDeletionFailedDesc": "Data not deleted with an unknown error. Do you want to delete data from just this device?",
   "dialogClearAllDataDeletionFailedTitleQuestion": "Do you want to delete data from just this device?",
   "dialogClearAllDataDeletionFailedMultiple": "Data not deleted by those Service Nodes: $snodes$",
-  "dialogClearAllDataDeletionQuestion": "Would you like to clear only this device, or delete your entire account?",
-  "deviceOnly": "Device Only",
-  "entireAccount": "Entire Account",
+  "dialogClearAllDataDeletionQuestion": "Would you like to clear this device only, or delete your data from the network as well?",
+  "deviceOnly": "Clear Device Only",
+  "entireAccount": "Clear Device and Network",
   "areYouSureDeleteDeviceOnly": "Are you sure you want to delete your device data only?",
-  "areYouSureDeleteEntireAccount": "Are you sure you want to delete your entire account, including the network data?",
+  "areYouSureDeleteEntireAccount": "Are you sure you want to delete your data from the network? If you continue, you will not be able to restore your messages or contacts.",
   "iAmSure": "I am sure",
   "recoveryPhraseSecureTitle": "You're almost finished!",
   "recoveryPhraseRevealMessage": "Secure your account by saving your recovery phrase. Reveal your recovery phrase then store it safely to secure it.",
@@ -453,7 +453,8 @@
   "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
   "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to them first.",
   "callMediaPermissionsDescription": "Enables voice and video calls to and from other users.",
-  "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
+  "callMediaPermissionsDialogContent": "Your IP is visible to your call partner and an Oxen Foundation server while using beta calls. Are you sure you want to enable Voice and Video Calls?",
+  "callMediaPermissionsDialogTitle": "Voice and Video Calls (Beta)",
   "startedACall": "You called $name$",
   "answeredACall": "Call with $name$",
   "trimDatabase": "Trim Database",
